service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  selector:
    app: echo-server
  ports:
    - name: websocket
      protocol: TCP
      port: 80
      targetPort: 80
