ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.livechat.local
      http:
        paths:
          - path: /ws/
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 8089
